# monaural

./: CMakeLists.txt  README.md  config.c  config.h  exports.yml  main.c  monaural.h  sce_audio.h  util.h
sound_test/: CMakeLists.txt  main.c  ps.pcm
sound_test/debug_screen/: debugScreen.c  debugScreen.h  debugScreenFont.c  debugScreen_custom.h
sound_test/sce_sys/livearea/contents/: template.xml
